GUI: PresetPanel alignment

--- a/src/main/java/components/PresetPanel.form
+++ b/src/main/java/components/PresetPanel.form
@@ -6,6 +6,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="alignmentX" type="float" value="0.0"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[350, 40]"/>
     </Property>
